--- a/src/Thinktecture.Extensions.Configuration.Legacy/Thinktecture.Extensions.Configuration.Legacy.csproj
+++ b/src/Thinktecture.Extensions.Configuration.Legacy/Thinktecture.Extensions.Configuration.Legacy.csproj
@@ -4,4 +4,8 @@
       <TargetFrameworks>netstandard2.0</TargetFrameworks>
       <PackageTags>configuration;app.config;web.config</PackageTags>
    </PropertyGroup>
+   <ItemGroup>
+     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
+     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
+   </ItemGroup>
 </Project>
